Register FocusObserver in the constructor of ArcImeService.

ash::Shell is created in PreProfileInit() step and ArcImeService is
started in PostProfileInit() step, so it is safe to register
FocusObserver in the constructor of ArcImeService.
This CL also cleans up IsExoWindow() and IsArcWindow() in
ArcWindowDelegateImpl.

Bug: 866784
Test: browser_tests, components_unittests
Change-Id: I3bd32f4e888f86cbd215791e559901e1457694e2
Reviewed-on: https://chromium-review.googlesource.com/1148089
Commit-Queue: Yuichiro Hanada <yhanada@chromium.org>
Reviewed-by: Kazuhiro Inaba <kinaba@chromium.org>
Reviewed-by: Yusuke Sato <yusukes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578162}
Former-commit-id: 51b8e60e32fbb3d79a2e3e5ab09dadfba16b3889