components/arc/ime/arc_ime_service.cc
@@ -13,8 +13,6 @@
 #include "components/arc/arc_browser_context_keyed_service_factory_base.h"
 #include "components/arc/arc_util.h"
 #include "components/arc/ime/arc_ime_bridge_impl.h"
-#include "components/exo/shell_surface.h"
-#include "components/exo/surface.h"
 #include "components/exo/wm_helper.h"
 #include "ui/aura/env.h"
 #include "ui/aura/window.h"
@@ -30,9 +28,6 @@
 namespace arc {
 
 namespace {
-
-constexpr char kArcNotificationAppId[] =
-    "org.chromium.arc.ArcNotificationService";
 
 base::Optional<double> g_override_default_device_scale_factor;
 
@@ -51,35 +46,18 @@ class ArcWindowDelegateImpl : public ArcImeService::ArcWindowDelegate {
 
   ~ArcWindowDelegateImpl() override = default;
 
-  bool IsExoWindow(const aura::Window* window) const override {
-    return exo::Surface::AsSurface(window) ||
-           exo::ShellSurface::GetMainSurface(window);
-  }
-
-  bool IsArcWindow(const aura::Window* window) const override {
-    if (!IsExoWindow(window))
-      return false;
-
-    aura::Window* active = exo::WMHelper::GetInstance()->GetActiveWindow();
-    if (!active || !active->Contains(window))
-      return false;
-    // If the ARC app is focused, the active window should be ARC app window.
-    if (IsArcAppWindow(active))
-      return true;
-
-    // If the ARC notification is focused, the active window is not ARC app
-    // window. Find an app id set to the window and check if it is the ARC
-    // notification app id.
-    for (; window && window != active; window = window->parent()) {
-      const std::string* app_id = exo::ShellSurface::GetApplicationId(window);
-      if (app_id)
-        return *app_id == kArcNotificationAppId;
+  bool IsInArcAppWindow(const aura::Window* window) const override {
+    for (; window; window = window->parent()) {
+      if (IsArcAppWindow(window))
+        return true;
     }
     return false;
   }
 
   void RegisterFocusObserver() override {
-    DCHECK(exo::WMHelper::HasInstance());
+    // WMHelper is not created in tests.
+    if (!exo::WMHelper::HasInstance())
+      return;
     exo::WMHelper::GetInstance()->AddFocusObserver(ime_service_);
   }
 
@@ -140,11 +118,11 @@ ArcImeService::ArcImeService(content::BrowserContext* context,
       arc_window_delegate_(new ArcWindowDelegateImpl(this)),
       ime_type_(ui::TEXT_INPUT_TYPE_NONE),
       is_personalized_learning_allowed_(false),
-      has_composition_text_(false),
-      is_focus_observer_installed_(false) {
+      has_composition_text_(false) {
   aura::Env* env = aura::Env::GetInstanceDontCreate();
   if (env)
     env->AddObserver(this);
+  arc_window_delegate_->RegisterFocusObserver();
 }
 
 ArcImeService::~ArcImeService() {
@@ -154,8 +132,7 @@ ArcImeService::~ArcImeService() {
 
   if (focused_arc_window_)
     focused_arc_window_->RemoveObserver(this);
-  if (is_focus_observer_installed_)
-    arc_window_delegate_->UnregisterFocusObserver();
+  arc_window_delegate_->UnregisterFocusObserver();
   aura::Env* env = aura::Env::GetInstanceDontCreate();
   if (env)
     env->RemoveObserver(this);
@@ -202,15 +179,6 @@ void ArcImeService::ReattachInputMethod(aura::Window* old_window,
 // Overridden from aura::EnvObserver:
 
 void ArcImeService::OnWindowInitialized(aura::Window* new_window) {
-  // Register the focus observer when every exo window is created because an
-  // application id might not be set here yet.
-  if (arc_window_delegate_->IsExoWindow(new_window)) {
-    if (!is_focus_observer_installed_) {
-      arc_window_delegate_->RegisterFocusObserver();
-      is_focus_observer_installed_ = true;
-    }
-  }
-
   // TODO(mash): Support virtual keyboard under MASH. There is no
   // KeyboardController in the browser process under MASH.
   if (features::IsAshInBrowserProcess() &&
@@ -250,8 +218,7 @@ void ArcImeService::OnWindowFocused(aura::Window* gained_focus,
     return;
 
   const bool detach = (lost_focus && focused_arc_window_ == lost_focus);
-  const bool attach =
-      (gained_focus && arc_window_delegate_->IsArcWindow(gained_focus));
+  const bool attach = arc_window_delegate_->IsInArcAppWindow(gained_focus);
 
   if (detach) {
     focused_arc_window_->RemoveObserver(this);
